Telas de cadastro criadas, testes de validações com JS

--- a/Flask/templates/login.html
+++ b/Flask/templates/login.html
@@ -22,7 +22,7 @@
                     <label for="password"><b>Senha:</b></label>
                     <input type="password" id="password" name="password" class="form-control" required>
                 </div>
-                <button type="submit" class="btn btn-primary p-2">Acessar</button>
+                <button type="submit" class="btn btn-primary p-2 m-2">Acessar</button>
             </form>
         </div>
         <!-- FIm da Div contendo o formulário de login  -->
