--- a/Flask/templates/cadastro_produto.html
+++ b/Flask/templates/cadastro_produto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         body {
-            padding-top: 56px; /* Ajuste para a navbar fixa */
+            padding-top: 56px; 
         }
         .navbar-brand {
             font-weight: bold;
@@ -25,7 +25,7 @@
         .search-suggestions {
             position: absolute;
             z-index: 1000;
-            width: calc(100% - 2px); /* Ajusta para alinhar com o input */
+            width: calc(100% - 2px); 
             max-height: 200px;
             overflow-y: auto;
             border: 1px solid #ced4da;
